# kcInteger

./: CMakeLists.txt  README.md
include/kcinteger/: primitive.h
src/kcinteger/: primitive.cpp
test/kciunit/: kcimain.cpp
